Bombay Groove/assets/css/style.css
body{
overflow-x: hidden;
}


p{
    font-family: 'Roboto', sans-serif;
}
 /* containers*/

.container-fluid{
    margin-right: 0;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
    border: 0;
}
.navbar-container{
    position: fixed;
    width: 100%;
    z-index:10;  
}

.callout-container-fluid{
    height: 90vh;
    width: 100%;
    background: url("../images/bombay-groove-color.JPG") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
    font-family: 'Bebas Neue', cursive;
    position: relative;
   }

.about-us-container{
   padding: 3rem;
   }

.quotes-container{
    background: #ff4f4f;
    opacity: 0.75;    
    padding: 3rem;
    }
    

/* End of Containers */

/* Navbar */

.navbar{
    font-family: 'Bebas Neue', cursive;
}
/* Jumbotron */

.jumbotron {
    background-color: transparent;
    font-family: 'Bebas Neue', cursive;
    color: white;
    position: relative;
}

.jumbotron-header {
    font-size: 4rem;
}
/* About Us */

.about-us-header,
.tablet-and-mobile-header{
    font-family: 'Bebas Neue', cursive;
    text-align: center;
}

.tablet-and-mobile-image{
    padding-top: 3.25rem;
}
.tablet-and-mobile-header{
    padding-top: 3rem;
    padding-bottom: 1.5rem;
}

.tablet-and-mobile-subheader{
    font-family: 'Bebas Neue', cursive;
    text-align: center;
    padding-bottom: 1.5rem;
}
.about-us p {
    font-family: 'Roboto', sans-serif;
    text-align: justify;
}

/* Quotes */

.quotes-header{
     font-family: 'Bebas Neue', cursive;
     text-align: center;
     color: white;
     }

.quotes p{
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
    font-weight: 400;
    text-align: justify;
    color: white;
} 

/* Special Margins and Padding */

.about-us,
.quotes{
    padding: 3rem 2rem;
}

.about-us-header,
.quotes-header {
    padding-top: 0;
    padding-bottom: 3rem;
}

/* Footer */ 

footer {
    background-color: #212529;
    color: white;
    font-family: 'Bebas Neue', cursive;
    min-height: 50px; 
}

/* Social Links */

.social-links{ 
    text-align: center;
    padding-top: 15px;
}

.social-links li {
    margin: 15px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 15px 0;
    border-radius: 50%;
    line-height:4px;
    text-align: center;
   /* text-justify: center; */
    color: #212529;
    background: white;
}

@media screen and (max-width:600px){
    .about-us-header,
    .quotes-header{
        padding-top: 0;
    }
.tablet-and-mobile-subheader{
    display: none;
}    
}

@media screen and (max-width:991px){
 .callout-container-fluid{
     display: none;
 }
 .about-us-container{
     padding-top: 0rem;
 }
 .about-us{
     padding-top: 1.5rem;
 }
}
   
/*--------------------------------------Watch/Listen------------------------------------*/


/* showreel */

.showreel{
    
}

/* Watch-Listen */

.watch-listen-header{
    font-family: 'Bebas Neue', cursive;
    text-align: center;
    padding: 3rem 3rem 0 3rem;  
    margin-top: 3rem;
    font-size: 4rem;
    color:black;
}

.watch-listen-container-fluid{
    padding-bottom: 3rem;
}

.audio-players{
    font-size: 10px;
    color: rgba(255, 79, 79, 0.75);
    line-break: anywhere;
    word-break: normal;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: Interstate, "Lucida Grande", "Lucida Sans Unicode",
    "Lucida Sans", Garuda, Verdana, Tahoma, sans-serif;
    font-weight: 100;    
    }

iframe{
    padding-left: 0rem;
}

.audio-players ul{
    padding-left: 0rem;
    padding-top: 0rem;
    margin-top: 0rem;
    list-style-type: none;

}

.audio-container-fluid{
    background: rgba(255, 79, 79, 0.75) no-repeat center center fixed;
    margin-right: 0px;
}

.listen-section {
    padding-top: 3rem;
}
.listen{
    margin-top: 0rem;
    color: white;
}

.watch,
.listen{
    margin: 0px;
    padding: 0px;
}

iframe{
    border:none;
 }

/*--------------------------------Repertoire-----------------------------------*/
.repertoire-container-fluid{
    padding: 6rem;
}
.repertoire-header{
    font-family: 'Bebas Neue', cursive;
    text-align: justify;
    color: rgba(255, 79, 79, 0.75);
    padding-top: 1.5rem;
}

.repertoire-paragraph{
    font-family: 'Roboto', sans-serif;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

.song-list-header{
    font-family: 'Bebas Neue', cursive;
    text-align: center;
    color: rgba(255, 79, 79, 0.75);
    padding-top: 3rem;
    padding-bottom: 1.5rem;
}

.song-list{
    text-align: justify;
    text-decoration: none;
}

@media only screen and (max-width: 991px){
    .repertoire-header{ 
        padding-top: 8rem;
    }
    .classical{
        padding-bottom: 7.4rem;
    }
    .phone-number{
        padding-bottom: 6rem;
    }
} 

@media only screen and (max-width: 600px){
    .classical{
        padding-bottom:1.5rem;
    }
}
/*-----------------------------------Gallery------------------------------------*/

.jumbotron-gallery-header{
    color: white;
    font-size: 4rem;
    position: relative;
}

.gallery-container-fluid{
    height: 90vh;
    width: 100%;
    background: url("../images/ark-royal-large-cropped.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
    font-family: 'Bebas Neue', cursive;
    position: relative;
    margin-bottom: 3rem;
   }

.image-container-fluid {
    padding: 0px;
    }

.image-container-fluid ul{
    padding-left: 0rem;
    padding-top: 0rem;
    margin-top: 6rem;
    margin-bottom: 3rem;
    list-style-type: none;
}

.image-selection {
    background: rgba(255, 79, 79, 0.75);
}

@media only screen and (max-width: 991px) {
    .image-selection { 
        background: white;
    }
    .image-container-fluid ul {  
    margin-top: 0rem;
    margin-bottom: 0rem;
    list-style-type: none;
    }
    .gallery-container-fluid {
        display: none;
    }
}

/*--------------------Contact-------------------*/

.contact-us-container-fluid{
    padding: 6rem;
}

.contact-header{
    font-family: 'Bebas Neue', cursive;
    text-align: justify;
    color: rgba(255, 79, 79, 0.75);
    padding-top: 1.5rem;
}

.contact-paragraph{
    font-family: 'Roboto', sans-serif;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

.contact-details {
    padding-bottom: 1.5rem;
}

.email {
    padding-bottom: 1.5rem;
}

.fa-envelope,
.fa-phone {
    font-size: 2rem;
}

@media only screen and (max-width:991px){
    .contact-header{
        padding-top: 12rem;
    }
    .phone{
        padding-bottom: 7.8rem;
    }
}

@media only screen and (max-width: 600px){
    .contact-header{
        padding-top: 1.5rem;        
    }
    .phone{
        padding-bottom: 0rem;
    }
    .phone-number{
        padding-bottom: 0rem;
    }
}

